----------  JFREECHART 1.0.14 RELEASED ------------------------

2011-10-30  David Gilbert <david.gilbert@object-refinery.com>

    * org/jfree/chart/renderer/category/IntervalBarRenderer.java
    (drawInterval): Fix calculation of bar edge;
    * org/jfree/chart/renderer/category/StatisticalBarRenderer.java
    (drawHorizontalItem): Fix calculation of bar edge;
    (drawVerticalItem): Likewise;
    
2011-10-30  David Gilbert <david.gilbert@object-refinery.com>

    * org/jfree/chart/StandardChartTheme.java
    (StandardChartTheme(String, boolean)): New method.

2011-10-28  Martin Hoeller <martin.hoeller@xss.co.at>

    Bug 2810220:
    * org/jfree/chart/renderer/category/StatisticalBarRenderer.java
    (drawHorizontalItem): Fixed offset problem with maximalBarWidth,
    (drawVerticalItem): Likewise;

2011-10-28  Martin Hoeller <martin.hoeller@xss.co.at>

    Bug 3428870:
    * org/jfree/chart/annotations/TextAnnotation.java
    (setRotationAnchor): Added missing argument check, Bug #3428870;

2011-10-28  Martin Hoeller <martin.hoeller@xss.co.at>

    Bug 3429707:
    * org/jfree/chart/axis/LogAxis.java
    (refreshTicksHorizontal): Fixed endless loop for 0 TickUnit,
    (refreshTicksVertical): Likewise;

2011-10-19  David Gilbert <david.gilbert@object-refinery.com>

    Bug 3072674:
    * org/jfree/data/statistics/DefaultStatisticalCategoryDataset.java
    (getRangeLowerBound): Check for NaN,
    (getRangeUpperBound): Likewise,
    (getRangeBounds): Call getRangeLowerBound() and getRangeUpperBound().

2011-10-19  David Gilbert <david.gilbert@object-refinery.com>

    Bug 3026341:
    * org/jfree/chart/renderer/xy/XYShapeRenderer.java
    (findDomainBounds): Check for null,
    (findRangeBounds): Likewise.

2011-10-18  David Gilbert <david.gilbert@object-refinery.com>

    Bug 3190615:
    * org/jfree/data/xy/CategoryTableXYDataset.java
    (clear): New method.

2011-10-16  David Gilbert <david.gilbert@object-refinery.com>

    * org/jfree/chart/plot/PiePlot.java